fixed gap on navbar

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,3 +3,8 @@
 .signup_pwd {
   display: flex;
 }
+
+
+.card.banner.pt-5 {
+  margin-top: -1.5rem;
+}
