--- a/app/assets/stylesheets/pages/_products.scss
+++ b/app/assets/stylesheets/pages/_products.scss
@@ -9,6 +9,7 @@
 .products_list {
   list-style-type: none;
   line-height: 1.6;
+  margin-left: -20px;
 }
 
 .product_list{
